# StarRupture_SocketSaveFix

./: .gitignore  CMakeLists.txt  README.md  mod.json  socket_save_fix.ini
.github/workflows/: build.yml
src/: hook.cpp  hook.h  main.cpp  patcher.cpp  patcher.h  scanner.cpp  scanner.h  ue_types.h
